--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </body>
     <head>
         <p>Лабораторні роботи Молитовника Павла Олеговича ІПЗ-23 Варіант-1</p>
-        <a href="../main/lab1.html">Лабораторна робота №1</a>
+        <a href="main/lab1.html">Лабораторна робота №1</a>
     </head>
 </html>
