--- a/main/lab1.html
+++ b/main/lab1.html
@@ -1,1 +1,10 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Лабораторна робота №1</title>
+</head>
+<body>
+    <p>Hello World</p>
+</body>
+</html>
