--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
-    <body>
-
-    </body>
-    <head>
-        <p>Лабораторні роботи Молитовника Павла Олеговича ІПЗ-23 Варіант-1</p>
-        <a href="main/lab1.html">Лабораторна робота №1</a>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Головна сторінка</title>
+</head>
+<body>
+    <p>Лабораторні роботи Молитовника Павла Олеговича ІПЗ-23 Варіант-1</p>
+    <a href="main/lab1.html">Лабораторна робота №1</a>
+</body>
 </html>
