--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Головна сторінка</title>
-</head>
-<body>
-    <p>Лабораторні роботи Молитовника Павла Олеговича ІПЗ-23 Варіант-1</p>
-    <a href="main/lab1.html">Лабораторна робота №1</a>
-</body>
+    <body>
+
+    </body>
+    <head>
+        <p>Лабораторні роботи Молитовника Павла Олеговича ІПЗ-23 Варіант-1</p>
+        <p><a href="main/lab1(1-5).html">Лабораторна робота №1(1-5 Завдання)</a></p>
+        <p><a href="main/lab1(6-7).html">Лабораторна робота №1(6-7 Завдання)</a></p>
+    </head>
 </html>
