--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <p>Лабораторні роботи Молитовника Павла Олеговича ІПЗ-23 Варіант-1</p>
         <p><a href="main/lab1(1-5).html">Лабораторна робота №1(1-5 Завдання)</a></p>
         <p><a href="main/lab1(6-7).html">Лабораторна робота №1(6-7 Завдання)</a></p>
+        <p><a href="main/lab2.html">Лабораторна робота №2</a></p>
     </head>
 </html>
