--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <p><a href="main/lab1(1-5).html">Лабораторна робота №1(1-5 Завдання)</a></p>
         <p><a href="main/lab1(6-7).html">Лабораторна робота №1(6-7 Завдання)</a></p>
         <p><a href="main/lab2.html">Лабораторна робота №2</a></p>
+        <p><a href="main/lab3/lab3.html">Лабораторна робота №3</a></p>
     </head>
 </html>
