--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
         <p><a href="main/lab2.html">Лабораторна робота №2</a></p>
         <p><a href="main/lab3.html">Лабораторна робота №3</a></p>
         <p><a href="main/lab4.html">Лабораторна робота №4</a></p>
+        <p><a href="main/lab5.1.html">Лабораторна робота №5(Завдання 1)</a></p>
+        <p><a href="main/lab5.2.html">Лабораторна робота №5(Завдання 2)</a></p>
+    </head>
     </head>
 </html>
