--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <p><a href="main/lab4.html">Лабораторна робота №4</a></p>
         <p><a href="main/lab5.1.html">Лабораторна робота №5(Завдання 1)</a></p>
         <p><a href="main/lab5.2.html">Лабораторна робота №5(Завдання 2)</a></p>
+        <p><a href="main/lab6.1.html">Лабораторна робота №6.1</a></p>
+        <p><a href="main/lab6.2.html">Лабораторна робота №6.2</a></p>
     </head>
     </head>
 </html>
