--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p><a href="main/lab5.2.html">Лабораторна робота №5(Завдання 2)</a></p>
         <p><a href="main/lab6.1.html">Лабораторна робота №6.1</a></p>
         <p><a href="main/lab6.2.html">Лабораторна робота №6.2</a></p>
+        <p><a href="main/lab7.html">Лабораторна робота №7</a></p>
     </head>
     </head>
 </html>
