--- a/main/lab7.html
+++ b/main/lab7.html
@@ -4,9 +4,9 @@
     </body>
     <head>
         <p><a href="index.html">На головну</a></p>
-        <p><a href="../lab7/lab7.1.html">Завдання 1</a></p>
-        <p><a href="../lab7/lab7.2.html">Завдання 2</a></p>
-        <p><a href="../lab7/lab7.3.html">Завдання 3</a></p>
+        <p><a href="lab7/lab7.1.html">Завдання 1</a></p>
+        <p><a href="lab7/lab7.2.html">Завдання 2</a></p>
+        <p><a href="lab7/lab7.3.html">Завдання 3</a></p>
     </head>
     </head>
 </html>
