--- a/main/lab7/lab7.2.html
+++ b/main/lab7/lab7.2.html
@@ -35,7 +35,7 @@
     
 </head>
 <body>
-    <p><a href="index.html">На головну</a></p>
+ <p><a href="../index.html">На головну</a></p>
     <div class="task-container">
         <h3>2.1. Порівняння довжини рядків</h3>
         <input type="text" id="string1" placeholder="Введіть перший рядок">
