--- a/main/lab7/lab7.3.html
+++ b/main/lab7/lab7.3.html
@@ -6,8 +6,8 @@
     <title>Конвертація стилів змінних та дат</title>
 </head>
 <body>
-    <p><a href="index.html">На головну</a></p>
-
+ <p><a href="../index.html">На головну</a></p>
+    
     <h1>Конвертація стилів змінних та заміна дат</h1>
 
     <!-- Введення для змінних у Snake Case -->
