--- a/main/lab7/lab7.1.html
+++ b/main/lab7/lab7.1.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <p><a href="../index.html">На головну</a></p>
+    <p><a href="../lab7.html">На головну</a></p>
     
     <div class="task-container">
         <h3>1.1. Вивести послідовність чисел в оберненому порядку (split)</h3>
