--- a/main/lab7/lab7.3.html
+++ b/main/lab7/lab7.3.html
@@ -6,7 +6,7 @@
     <title>Конвертація стилів змінних та дат</title>
 </head>
 <body>
- <p><a href="../index.html">На головну</a></p>
+    <p><a href="../lab7.html">На головну</a></p>
     
     <h1>Конвертація стилів змінних та заміна дат</h1>
 
