--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p><a href="main/lab6.1.html">Лабораторна робота №6.1</a></p>
         <p><a href="main/lab6.2.html">Лабораторна робота №6.2</a></p>
         <p><a href="main/lab7.html">Лабораторна робота №7</a></p>
+        <p><a href="main/lab8.html">Лабораторна робота №8</a></p>
     </head>
     </head>
 </html>
