--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p><a href="main/lab7.html">Лабораторна робота №7</a></p>
         <p><a href="main/lab8.html">Лабораторна робота №8</a></p>
         <p><a href="main/lab9.html">Лабораторна робота №9(Завдання 1)</a></p>
-        <p><a href="main/lab9.2.html">Лабораторна робота №9(Завдання 2)</a></p>
+        <p><a href="main/lab9-2.html">Лабораторна робота №9(Завдання 2)</a></p>
     </head>
     </head>
 </html>
