--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p><a href="main/lab8.html">Лабораторна робота №8</a></p>
         <p><a href="main/lab9.html">Лабораторна робота №9(Завдання 1)</a></p>
         <p><a href="main/lab9-2.html">Лабораторна робота №9(Завдання 2)</a></p>
+         <p><a href="main/lab10.html">Лабораторна робота №10</a></p>
     </head>
     </head>
 </html>
