--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p><a href="main/lab9-2.html">Лабораторна робота №9(Завдання 2)</a></p>
         <p><a href="main/lab10.html">Лабораторна робота №10</a></p>
         <p><a href="main/lab11.html">Лабораторна робота №11</a></p>
+        <p><a href="main/lab12.html">Лабораторна робота №12</a></p>
     </head>
     </head>
 </html>
